2005-02-04  Not Zed  <NotZed@Ximian.com>

	** See bug #65329

	* em-folder-properties.c (emfp_dialog_got_folder): translate
	local-store special folders.

2005-02-01  Not Zed  <NotZed@Ximian.com>

	** See bug #71312.

	* em-folder-view.c (em_folder_view_open_selected): if we're
	looking at a vfolder, then look open the original folder if we need
	to perform any edits.

2005-02-01  Not Zed  <NotZed@Ximian.com>

	** See bug #71310

	* em-composer-prefs.c (sig_add_script_response): force a save of
	the signatures as soon as they change.  Also save the script name
	if we were just editing it, not just the signature name.

2005-02-01  Not Zed  <NotZed@Ximian.com>

	** See bug #65329.

	* mail-component.c (view_changed_cb): translate special names on
	the local store.

2005-01-31  Not Zed  <NotZed@Ximian.com>
  
	** See bug #69850
	
	* mail-autofilter.c (rule_from_message): dont crash if we're
	missing the requested headers.

2005-01-14  Not Zed  <NotZed@Ximian.com>

	** Related to changes for #65178.

	* mail-vfolder.c (mv_find_folder): changed from my_list_find, take
	store arg and use camel_Store_Folder_uri_equal() instead of wrong
	uri_cmp function.
	(mail_vfolder_delete_uri): same.
	(mail_vfolder_rename_uri): same.
	(uri_is_ignore): take store arg, and same as above.  use the right
	uri for checking sent folder.
	(mail_vfolder_*): convert to storing uri's in camel form.

2005-01-19  Not Zed  <NotZed@Ximian.com>

	** See bug #70858.

	* em-folder-selector.c (folder_created_cb): removed.
	(emfs_response): set the selected uri directly after creating it,
	rather than doing it asynchronously.

	* mail-account-gui.c (mail_account_gui_save): dont dereference
	default folder pointers if they're NULL.

2005-01-21  Not Zed  <NotZed@Ximian.com>

	** See bug #60664.

	* em-format-html-display.c (efhd_init, efhd_gtkhtml_style_set): if
	the style changes, re-calculate the page colours, and redraw.

2005-01-18  Not Zed  <NotZed@Ximian.com>

	** See bug #70768.
